<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_information">

    <fragment
        android:id="@+id/navigation_information"
        android:name="com.example.quranrecitation.ui.fragment.information.InformationFragment"
        android:label="@string/title_information"
        tools:layout="@layout/fragment_information" />

    <fragment
        android:id="@+id/navigation_cnn"
        android:name="com.example.quranrecitation.ui.fragment.cnn.CnnFragment"
        android:label="@string/recite_cnn"
        tools:layout="@layout/fragment_cnn" />

    <fragment
        android:id="@+id/navigation_svm"
        android:name="com.example.quranrecitation.ui.fragment.svm.SvmFragment"
        android:label="@string/recite_cnn"
        tools:layout="@layout/fragment_svm" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.quranrecitation.ui.fragment.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />
</navigation>