<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomSheet"
    android:layout_width="match_parent"
    android:layout_height="650dp"
    android:background="@drawable/round_corner_top"
    android:padding="16dp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <TextView
        android:id="@+id/TextKategori"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="14dp"
        android:fontFamily="@font/inter"
        android:text="@string/contoh_hasil_paragraf"
        android:textAlignment="center"
        android:textColor="@color/font_judul_bottomSheet"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:fontFamily="@font/inter_bold" />

    <ImageView
        android:id="@+id/ImgHasilInformasi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:src="@drawable/ic_kategori_good"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextKategori" />

    <TextView
        android:id="@+id/TeksHasilAkurasi"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/inter"
        android:text="@string/text_hasil_akurasi"
        android:textAlignment="center"
        android:textColor="@color/font_judul"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ImgHasilInformasi" />

    <ImageView
        android:id="@+id/imgHasilVisualisasi"
        android:layout_width="318dp"
        android:layout_height="150dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/contoh_hasil_visualisasi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TeksHasilAkurasi" />

    <TextView
        android:id="@+id/TvSaveRecord"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/inter"
        android:text="@string/save_record"
        android:textAlignment="center"
        android:textColor="@color/font_judul"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgHasilVisualisasi" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/InputLayout"
        style="@style/TextLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TvSaveRecord">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fileNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="fill_vertical"
            android:inputType="text"
            android:maxLines="1"
            android:padding="16dp"
            android:scrollHorizontally="false" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/containerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="80dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InputLayout">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonCancel"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:layout_marginEnd="14dp"
            android:backgroundTint="@color/background_light_grey"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/black"
            app:cornerRadius="24dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonOk"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/background_button_ulangi"
            android:gravity="center"
            android:text="@string/ok"
            android:textColor="@color/white"
            app:cornerRadius="24dp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
