<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.cnn.CnnFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_Halaman"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintBottom_toTopOf="@id/containerAyat"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="5dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="10dp"
                    android:backgroundTint="@color/state_checked_true"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/halamanRecite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="120dp"
                    android:text="@string/al_ma_idah_109"
                    android:textColor="@color/font_judul"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.115"
                    app:layout_constraintStart_toEndOf="@+id/cardView"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/containerAyat"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/card_edge"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/container_Halaman">

                <TextView
                    android:id="@+id/TextAyat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/scheherazade"
                    android:text="@string/ayat_alMaidah"
                    android:textAlignment="center"
                    android:textColor="@color/font_paragraf"
                    android:textSize="36sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/TextAyatLatin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/ayat_latin"
                    android:textAlignment="center"
                    android:textColor="@color/font_judul"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/TextAyat" />

                <ImageButton
                    android:id="@+id/ButtonPlayExample"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/roundcorner"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/ic_play"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintCircleRadius="100dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/seekbar" />

                <TextView
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="28dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/timeText"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/TextAyatLatin" />

                <SeekBar
                    android:id="@+id/seekbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="20dp"
                    android:progressBackgroundTint="@color/purple_200"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/time" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.example.quranrecitation.feature.WaveformView
                android:id="@+id/waveFormView"
                android:layout_width="match_parent"
                android:layout_height="400px"
                android:layout_marginTop="18dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/containerAyat" />

            <TextView
                android:id="@+id/tvTimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="00:00:00"
                android:textSize="36sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/waveFormView" />

            <LinearLayout
                android:id="@+id/LinearButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTimer">

                <ImageButton
                    android:id="@+id/ButtonDelete"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/roundcorner_grrey"
                    android:clickable="true"
                    android:src="@drawable/ic_cross" />

                <ImageButton
                    android:id="@+id/ButtonRecord"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:background="@drawable/roundcorner_yellow"
                    android:clickable="true"
                    android:src="@drawable/ic_mic"
                    app:layout_constraintCircleRadius="100dp" />

                <ImageButton
                    android:id="@+id/ButtonDone"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="24dp"
                    android:background="@drawable/roundcorner_grrey"
                    android:clickable="true"
                    android:src="@drawable/ic_check"
                    android:visibility="visible"
                    app:layout_constraintCircleRadius="100dp"
                    app:layout_constraintStart_toEndOf="@id/ButtonRecord"
                    app:layout_constraintTop_toBottomOf="@id/containerAyat" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_fileUpload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/LinearButton"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/upload_dengan_file"
                android:textColor="@color/dark_blue"
                android:textSize="16sp"
                android:clickable="true"
                android:visibility="visible"/>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="284dp"
                android:layout_gravity="center"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>

